- fix different control sizing in FX dark mode - fixes #772

--- a/src/main/resources/mediathek/res/css/javafx-dark-mode/style.css
+++ b/src/main/resources/mediathek/res/css/javafx-dark-mode/style.css
@@ -266,9 +266,6 @@
     -fx-background-color: transparent;
     background-color: transparent;
     -fx-text-fill: #AFB1B3;
-    -fx-min-height: 25;
-    min-height: 25;
-    -fx-pref-height: 25;
 }
 .check-box > .box{
     -fx-background-radius: 0;
